Enhance handling of protein N-terminal modifications and improve variable modification settings in the GUI